--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
         total += (alpha - prevAlpha) * (alpha - prevAlpha) + (beta - prevBeta) * (beta - prevBeta) + (gamma - prevGamma) * (gamma - prevGamma);
 
-        if(total >= 1000000) {
+        if(total >= 250000) {
             document.getElementById('bottle').src = 'img/answer.png';
         }
-        else if(total >= 800000) {
+        else if(total >= 200000) {
             document.getElementById('bottle').src = 'img/bottle-end.png';
         }
         else if(total >= 100000) {
