--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         }
         div.innerText = total;
 
-        if(total >= 250000) {
+        if(total >= 1100000) {
             document.getElementById('bottle').src = 'img/answer.png';
         }
-        else if(total >= 200000) {
+        else if(total >= 1000000) {
             document.getElementById('bottle').src = 'img/bottle-end.png';
         }
-        else if(total >= 100000) {
+        else if(total >= 200000) {
             document.getElementById('bottle').src = 'img/bottle-3rd.png';
         }
         else if(total >= 5000) {
